moved module-info.java to default package and added fmxl as module.